--- a/frontend/src/components/Chat Window/chatWindow.css
+++ b/frontend/src/components/Chat Window/chatWindow.css
@@ -10,10 +10,11 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 65%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
+}
 
 .chat-header {
   background-color: #2196f3;
