--- a/frontend/src/components/Chat Window/chatWindow.css
+++ b/frontend/src/components/Chat Window/chatWindow.css
@@ -1,23 +1,22 @@
 .chat-window {
   max-width: 600px;
-    width: 85vw;
-    height: 75vh;
-    overflow: auto;
-    margin: 20px auto;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
+  width: 85vw;
+  height: 75vh;
+  overflow: auto;
+  margin: 20px auto;
+  border-radius: 8px;
+  box-shadow: 0px 0px 20px 7px rgb(229 223 223 / 17%);
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
 }
 
 .chat-header {
-  background-color: #2196f3;
+  background-color: #385f7f;
   color: white;
   padding: 10px;
   font-size: 18px;
@@ -29,62 +28,45 @@
   height: 200px; /* Set your desired height */
   padding: 10px;
   overflow-y: auto;
-}
-
-
-.message {
-  padding: 8px;
-  margin: 8px;
-  border-radius: 8px;
-  word-wrap: break-word;
-  max-width: 70%; /* Adjust the maximum width as needed */
-}
-
-.message.user {
-  background-color: yellowgreen;
-  color: white;
-  text-align: right;
-  margin-left: auto;
-}
-
-.message.bot {
-  background-color: #03a9f4;
-  color: white;
-  text-align: left;
-  margin-right: auto;
+  background-color: #282634;
 }
 
 .chat-input {
   display: flex;
   align-items: center;
-  padding: 10px;
+  background-color: #282634;
 }
 
 input {
   flex: 1;
-  padding: 8px;
-  margin-right: 8px;
+  padding: 13px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  margin: 8px;
+  border-radius: 17px;
+  border: none;
 }
 
-button {
+#sendButton {
   background-color: #2196f3;
   color: white;
   border: none;
-  padding: 8px 12px;
-  border-radius: 4px;
+  border-radius: 22px;
   cursor: pointer;
+  padding: 10px 11px 6px 9px;
+  margin-right: 10px;
 }
 
 .close-button {
   position: absolute;
-  align-self: flex-end; /* Move close button to the end of the flex container */
+  align-self: flex-end;
   background: none;
   border: none;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 35px;
   color: #ccc;
+  margin-right: 20px;
+  text-shadow: 0 0 7px #fa9696;
 }
 
 /* Customize scrollbar */
@@ -95,4 +77,28 @@ button {
 .chat-messages::-webkit-scrollbar-thumb {
   background-color: #2196f3;
   border-radius: 4px;
+}
+
+.message {
+  padding: 9px;
+  margin: 8px;
+  border-radius: 8px;
+  word-wrap: break-word;
+  max-width: 67%;
+  overflow: hidden;
+  word-break: break-word;
+}
+
+.message.user {
+  background-color: #2a454e;
+  color: #00dfbe;
+  text-align: right;
+  margin-left: auto;
+}
+
+.message.bot {
+  background-color: #00dfbe;
+  color: #fffeff;
+  text-align: left;
+  margin-right: auto;
 }
