--- a/frontend/src/components/User/user.css
+++ b/frontend/src/components/User/user.css
@@ -1,7 +1,4 @@
-/* Users.css */
-
 .tableContainer {
-  /* width: 75%; */
   margin: auto;
 }
 
@@ -9,19 +6,17 @@
   background-color: #333;
 }
 
-.tableHeadCell{
+.tableHeadCell {
   color: white !important;
-  font-family:  'McLaren' !important;
+  font-family: "McLaren" !important;
   font-size: 23px !important;
   font-weight: 700 !important;
 }
 
-
 .tableBodyCell {
   color: white !important;
-  font-family:  'McLaren' !important;
+  font-family: "McLaren" !important;
   font-size: 16px !important;
-  /* margin:  auto !important; */
 }
 
 .tableRow {
@@ -33,13 +28,9 @@
 .button {
   width: 170px;
   font-size: 16px !important;
-  font-family: 'McLaren' !important;
+  font-family: "McLaren" !important;
 }
 
-.blur-container {
-  filter: blur(5px); /* Adjust the blur intensity as needed */
+.user-blur-container {
+  filter: blur(5px);
 }
-
-/* .main-container {
-   position: relative; 
-} */
