--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,10 @@
- @import url('https://fonts.googleapis.com/css2?family=McLaren&display=swap');
-
-
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'McLaren', sans-serif;
+  font-family: "McLaren", sans-serif;
 }
 
-
 :root {
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -24,51 +19,19 @@
 }
 
 a {
-    font-family: 'McLaren', sans-serif;
   font-weight: 500;
+  text-decoration: none;
 }
 
 body {
   margin: 0;
-  /* display: flex; */
-  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  background-color: #242424;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
-/* button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-} */
-/* button:hover {
-  border-color: #646cff;
-} */
-/* button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-} */
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
