--- a/frontend/src/components/User/user.css
+++ b/frontend/src/components/User/user.css
@@ -25,7 +25,7 @@
   }
 }
 
-.button {
+.tableBodyCell .button {
   width: 170px;
   font-size: 16px !important;
   font-family: "McLaren" !important;
@@ -33,4 +33,10 @@
 
 .user-blur-container {
   filter: blur(5px);
+}
+
+.pagination-container{
+  margin: 20px auto;
+    display: flex;
+    justify-content: center;
 }
